# SPL--8004

./: .env  .env.example  .gitignore  .mailmap  .vercelignore  ALL-LAYERS-ACTIVE-REPORT.md  APP-X402-TEST-KILAVUZU.md  Anchor.toml  BOUNTY_SYSTEM_PROPOSAL.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION-STRUCTURE.md  Dockerfile  FEATURES.md  GERÇEK-ÖDEME-AKIŞI.md.backup  HACKATHON_CHECKLIST.md  HACKATHON_CHECKLIST_EN.md  HACKATHON_PITCH.md  INFRASTRUCTURE_VISION.md  INTEGRATION_TEST_RESULTS.md  INVESTOR-PITCH.md  LANDING-PAGE.md  LAUNCH_TWEET.md  LINK_FIX_STEPS.md  MAINNET-GEÇİŞ.md.backup  NEW-PAGES-IMPLEMENTATION.md  NOEMA_BRANDING_STRATEGY.md  NOEMA_LINKING.md  NOEMA_LINK_TEST_GUIDE.md  OPS.md  PAYAI_PARTNERSHIP_PROPOSAL.md  PLATFORM-STRATEGY.md  PLATFORM_README.md  PRODUCT-HUNT-LAUNCH.md  PROJECT-SUMMARY.md  README.md  README.old.md  README_OLD.md  ROADMAP.md  SDK_DESIGN.ts  (+42 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FUNDING.yml  MAINNET-DEPLOYMENT-GUIDE.md  MANUAL_REPO_CREATION.md  MULTI_REPO_SETUP_GUIDE.md  NPM_PUBLISHING_GUIDE.md  PULL_REQUEST_TEMPLATE.md  README.md  REPOSITORY_STRUCTURE.md  REVENUE-MODEL.md  SECURITY.md  TRANSLATION_AND_REPO_SETUP_COMPLETE.md  labeler.yml
.vercel/: project.json
api/: index.ts  messaging.ts  noema-faucet.ts  solana.js  solana.ts
assets/: index-1BiLEpn-.js  index-4p3eyg1Q.js  index-8YBkpjbv.js  index-B0LDq-Q3.js  index-BMebK2Wg.css  index-BNCV3Ku4.js  index-BSkrADpQ.js  index-BfZLSSa7.js  index-BhCsVnHA.css  index-Bi7SCFlI.js  index-BlESMLow.js  index-BoLP6ys0.js  index-BpRCsxWk.js  index-Butc57QP.js  index-C80GjPqR.js  index-CMUT2I1N.js  index-CN73NqhO.js  index-CRozf_NW.js  index-CWVWCYOH.js  index-CYyDYY1J.js  index-Clq6wSgw.js  index-CpKIP9H1.css  index-CxjVZOCP.js  index-D-4Ul4TK.js  index-D3NWGe8x.js  index-D8jhJuCg.css  index-D9WDMqNw.js  index-D9gIZsyH.js  index-DByoBKI5.css  index-DDqth3X3.js  index-DGT3FSCh.js  index-DQ3fMbEQ.js  index-DRGuXbsT.js  index-DfD4AAAg.css  index-Dh-9MzLM.js  index-DiI7AkmV.js  index-DmfTOGmE.js  index-DsdQj2sa.js  index-DtgL8Dir.js  index-DuXf9BeT.js  (+12 more)
dashboard/: LICENSE  OVERVIEW.md  package-lock.json  package.json  vercel.json  vite.config.ts
docs/: INDEX.md  INTEGRATION-SUMMARY.md  INTEGRATIONS.md  MESSAGING_API.md
noema-8004-program/: DEPLOYMENT.md  deploy-all-protocols.sh
noema-8004-program/noema-8004/programs/spl-8004/: Cargo.toml
noema-8004-program/noema-8004/programs/spl-8004/src/: constants.rs  errors.rs  lib.rs  state.rs
noema-8004-program/noema-8004/programs/spl-8004/src/instructions/: accept_bid.rs  assign_reputation.rs  claim_rewards.rs  deactivate_agent.rs  initialize_config.rs  mod.rs  publish_task.rs  register_agent.rs  stake_validator.rs  submit_bid.rs  submit_validation.rs  unstake_validator.rs  update_metadata.rs  update_reputation.rs
noema-8004-program/spl-acp/programs/spl-acp/: Cargo.toml
noema-8004-program/spl-acp/programs/spl-acp/src/: lib.rs
noema-8004-sdk/: README.md  package.json
noema-staking/: Anchor.toml  Cargo.toml
public/: _headers  build-info.json  (+1 more)
spl_8004/programs/noema_link/: Cargo.toml
spl_8004/programs/noema_link/src/: lib.rs
staking-program/programs/staking/: Cargo.toml
staking-program/programs/staking/src/: constants.rs  lib.rs  state.rs
staking-program/programs/staking/src/instructions/: initialize.rs  stake.rs  unstake.rs
x404-bridge/programs/x404-bridge/: Cargo.toml
x404-bridge/programs/x404-bridge/src/: constants.rs  errors.rs  lib.rs
x404-bridge/programs/x404-bridge/src/instructions/: delist.rs  initialize.rs  list_for_sale.rs  mod.rs  purchase.rs  sync_reputation.rs  tokenize_agent.rs  update_metadata.rs
x404-bridge/programs/x404-bridge/src/state/: agent_nft.rs  config.rs  listing.rs  mod.rs
x404-integration/programs/x404-agent-nft/: Cargo.toml
x404-integration/programs/x404-agent-nft/src/: lib.rs
(+391 files in other folders)
