[package]
name = "x404-bridge"
version = "0.1.0"
description = "X404 NFT Bridge for SPL-8004 Agent Identities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x404_bridge"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "3.2.0"
solana-program = "1.17.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"
