[package]
name = "x404-agent-nft"
version = "0.1.0"
description = "X404 Agent NFT Integration for SPL-8004"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x404_agent_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
