[package]
name = "x404-agent-nft"
version = "0.1.0"
description = "X404 NFT Bridge - Convert SPL-8004 agents to tradeable NFTs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x404_agent_nft"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
